--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "description": "Личный проект «Пинк» от HTML Academy",
   "devDependencies": {
+    "@htmlacademy/editorconfig-cli": "1.x",
     "autoprefixer": "9.5.x",
-    "browser-sync": "2.26.x",
+    "browser-sync": "^2.26.7",
     "gulp": "4.0.x",
     "gulp-plumber": "1.2.x",
-    "gulp-sourcemaps": "2.6.x",
     "gulp-postcss": "8.0.x",
     "gulp-sass": "4.0.x",
-    "@htmlacademy/editorconfig-cli": "1.x",
+    "gulp-sourcemaps": "2.6.x",
     "stylelint": "10.1.x",
     "stylelint-config-htmlacademy": "0.1.x"
   },
@@ -37,5 +37,21 @@
   ],
   "engines": {
     "node": "8.16"
-  }
+  },
+  "main": "gulpfile.js",
+  "dependencies": {
+    "fsevents": "^2.1.2",
+    "node-sass": "^4.13.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zharkowski/245269-pink-18.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/zharkowski/245269-pink-18/issues"
+  },
+  "homepage": "https://github.com/zharkowski/245269-pink-18#readme"
 }
