--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pink-18",
   "version": "17.0.0",
   "private": true,
-  "description": "Личный проект «Пинк» от HTML Academy",
+  "description": "Личный проект «Пинк» от HTML Academy",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.x",
     "autoprefixer": "9.5.x",
@@ -22,11 +22,12 @@
     "gulp-webp": "^4.0.1",
     "posthtml-include": "^1.3.3",
     "stylelint": "10.1.x",
-    "stylelint-config-htmlacademy": "0.1.x"
+    "stylelint-config-htmlacademy": "0.1.x",
+    "del": "^5.1.0"
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
-    "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
+    "stylelint": "stylelint \"source/sass//.scss\" --syntax scss",
     "test": "npm run editorconfig && npm run stylelint",
     "build": "gulp build",
     "start": "gulp start"
@@ -37,30 +38,14 @@
     "Firefox ESR"
   ],
   "editorconfig-cli": [
-    "*.json",
-    "*.js",
-    "source/*.html",
-    "source/js/**/*.js",
-    "source/img/**/*.svg",
-    "source/sass/**/*.{sass,scss}"
+    ".json",
+    ".js",
+    "source/.html",
+    "source/js//.js",
+    "source/img//.svg",
+    "source/sass//*.{sass,scss}"
   ],
   "engines": {
     "node": "8.16"
-  },
-  "main": "gulpfile.js",
-  "dependencies": {
-    "del": "^5.1.0",
-    "node-sass": "^4.13.1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/zharkowski/245269-pink-18.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/zharkowski/245269-pink-18/issues"
-  },
-  "homepage": "https://github.com/zharkowski/245269-pink-18#readme"
+  }
 }
