делает фиксы для базовых критерияев и некоторых дополнительных

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
-    "stylelint": "stylelint \"source/sass//.scss\" --syntax scss",
+    "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
     "test": "npm run editorconfig && npm run stylelint",
     "build": "gulp build",
     "start": "gulp start"
@@ -40,10 +40,10 @@
   "editorconfig-cli": [
     ".json",
     ".js",
-    "source/.html",
-    "source/js//.js",
-    "source/img//.svg",
-    "source/sass//*.{sass,scss}"
+    "source/*.html",
+    "source/js/**/*.js",
+    "source/img/**/*.svg",
+    "source/less/**/*.{sass,scss}"
   ],
   "engines": {
     "node": "8.16"
